Refactored navbar structure: Updated navigation bar by converting list items to anchor tags, standardizing class names for styling consistency, and adding a new 'Services' section.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="navbar">
-        <li id="logo"><a href="#"></a>Logo Placeholder</li>
-        <li id="about-us">About Us</li>
-        <li id="contact-us">Contact Us</li>
+    <div id="navbar">
+        <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
+        <a id="services" class="navbar-item">Services</a>
+        <a id="about-us" class="navbar-item">About Us</a>
+        <a id="contact-us" class="navbar-item">Contact Us</a>
     </div>
 
     
