--- a/ACI/index.html
+++ b/ACI/index.html
@@ -4,14 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACI</title>
+    <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="navbar">
         <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
-        <a id="services" class="navbar-item">Services</a>
-        <a id="about-us" class="navbar-item">About Us</a>
-        <a id="contact-us" class="navbar-item">Contact Us</a>
+        <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
+        <a id="services" class="navbar-item" href="Services/index.html">Services</a>
+        <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
+        <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
+        <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
+        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
+        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">Contact Us</a>
+    </div>
+    <div id="text-container">
+        <p id="text-body">The Association of Computer Institutes (ACI) is a prominent national-level organization <br>
+            registered under the Society Registration Act XXI of 1860, bearing Registration No-66879, <br>
+            New Delhi. Founded on September 9, 2009, ACI operates as a not-for-profit entity with a <br>
+            mission to empower youth and stimulate entrepreneurship across India. By focusing on <br>
+            vocational training and skill development, ACI is instrumental in shaping the future of <br>
+            Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is <br>
+            equipped to thrive in a rapidly evolving economy.</p>
     </div>
 
     
@@ -19,3 +33,5 @@
 </html>
 
 
+<!-- <span>Home</span> -->
+<!-- https://docs.fontawesome.com/web/add-icons/how-to -->
