Added Google Fonts link for 'Roboto' font styling and updated the 'Contact Us' label to 'CONTACT'. Minor formatting adjustments made to the text content for improved readability.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACI</title>
     <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,15 +17,16 @@
         <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
         <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
         <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
-        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">Contact Us</a>
+        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
     </div>
     <div id="text-container">
-        <p id="text-body">The Association of Computer Institutes (ACI) is a prominent national-level organization <br>
-            registered under the Society Registration Act XXI of 1860, bearing Registration No-66879, <br>
-            New Delhi. Founded on September 9, 2009, ACI operates as a not-for-profit entity with a <br>
-            mission to empower youth and stimulate entrepreneurship across India. By focusing on <br>
-            vocational training and skill development, ACI is instrumental in shaping the future of <br>
-            Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is <br>
+        <p id="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
+            organization registered under the Society Registration Act XXI of 1860, 
+            bearing Registration No-66879, New Delhi. Founded on September 9, 2009, 
+            ACI operates as a not-for-profit entity with a mission to empower youth 
+            and stimulate entrepreneurship across India. By focusing on vocational 
+            training and skill development, ACI is instrumental in shaping the future of 
+            Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
             equipped to thrive in a rapidly evolving economy.</p>
     </div>
 
