Added line breaks to the text headers and included the headers in the text container.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -27,13 +27,13 @@
         and stimulate entrepreneurship across India. By focusing on vocational 
         training and skill development, ACI is instrumental in shaping the future of 
         Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
-        equipped to thrive in a rapidly evolving economy.</p>
-        <h2>Vision</h2> 
-        <p class="text-body">To be a catalyst for economic growth by empowering individuals through skill development 
+        equipped to thrive in a rapidly evolving economy.<br><br>
+        <span class="text-header">Vision</span><br><br>
+        To be a catalyst for economic growth by empowering individuals through skill development 
         and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
-        all sectors.</p>
-        <h2>About ACI</h2>
-        <p class="text-body">Established in 2009, ACI is a leading not-for-profit organization dedicated to 
+        all sectors.<br><br>
+        <span class="text-header">About ACI</span><br><br>
+        Established in 2009, ACI is a leading not-for-profit organization dedicated to 
         entrepreneurship development and youth empowerment in India. ACI works closely 
         with national and international bodies, including the Directorate General of 
         Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
