--- a/ACI/index.html
+++ b/ACI/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACI</title>
     <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,11 +28,11 @@
         and stimulate entrepreneurship across India. By focusing on vocational 
         training and skill development, ACI is instrumental in shaping the future of 
         Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
-        equipped to thrive in a rapidly evolving economy.<br><br>
+        equipped to thrive in a rapidly evolving economy.<br><br><br>
         <span class="text-header">Vision</span><br><br>
         To be a catalyst for economic growth by empowering individuals through skill development 
         and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
-        all sectors.<br><br>
+        all sectors.<br><br><br>
         <span class="text-header">About ACI</span><br><br>
         Established in 2009, ACI is a leading not-for-profit organization dedicated to 
         entrepreneurship development and youth empowerment in India. ACI works closely 
