Made the index files of the various pages the same as homepage so the navbar is consistent across all pages.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -4,18 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="navbar">
         <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
-        <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
+        <a class="navbar-item" href="/index.html"><i class="fa fa-home"></i></a>
         <a id="services" class="navbar-item" href="Services/index.html">Services</a>
         <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
         <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
         <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
-        <a id="about-us" class="navbar-item">About Us</a>
-        <a id="contact-us" class="navbar-item">Contact Us</a>
+        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
+        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">Grievance</a>
     </div>
+    <div id="text-container">
+        
+        <p class="text-body">
+            <span class="text-header">Business Counselling & Entrepreneurship Development</span><br><br>
+            ACI provides sector-specific counselling to young entrepreneurs and MSMEs, 
+            offering guidance on various business opportunities. One-on-one business counselling 
+            is provided voluntarily by experienced member entrepreneurs trained in professional 
+            counselling. Additionally, ACI offers access to business ideas, government schemes, 
+            incentives, and incubation centers across India.<br><br><br>
+            <span class="text-header">Skill Assessment</span><br><br>
+            As an independent assessing body, ACI evaluates the competencies of individuals trained 
+            under the Modular Employable Skills (MES) Courses and those who have acquired skills 
+            informally. ACI is also in the final stages of developing online skill assessments, 
+            further enhancing accessibility and efficiency in evaluation.<br><br><br>
+            <span class="text-header">Content Development & Certification</span><br><br>
+            ACI conducts sector-specific studies to develop question banks under the Sector Skill 
+            Councils (SSC) and Skill Development Initiatives (SDI) schemes, ensuring rigorous 
+            assessment standards.<br><br><br>
+            <span class="text-header">Skill Assessment and Certifications</span><br><br>
+            ACI operates as an impartial, third-party organization with no involvement in training 
+            programs, which guarantees the quality and credibility of its assessments. Since 2015, 
+            ACI has assessed more than 40,000 candidates through a network of over 350 highly 
+            qualified assessors under the DGET-Modular Employable Skills (MES) Courses, including 
+            candidates who have acquired skills informally.
+            ACI is accredited by the DGET-Modular Employable Skills (MES) under the National 
+            Accreditation Board of Education & Training, New Delhi, ensuring adherence to the 
+            highest levels of performance, integrity, and quality. With offices across most states 
+            in India, ACI maintains approximately 15-20 accredited examiners per state, operating 
+            within a well-defined framework to meet local and regional requirements.<br><br><br>
+            <span class="text-header">National Skill Qualification Framework (NSQF)</span><br><br>
+            The National Skill Qualification Framework (NSQF) is a quality assurance framework that 
+            organizes qualifications according to levels of knowledge, skills, and aptitude. 
+            Comprising ten levels, each represents a different level of complexity and expertise.
+                <span class="list-point-parent">National Occupation Standards (NOS):</span>
+                These standards define the measurable performance outcomes expected from individuals 
+                in specific tasks, serving as benchmarks for various education and training programs.
+                <span class="list-point-parent">Assessments: ACI’s assessments focus on:</span>
+                ◦ Competency-Based Assessment: Collecting evidence and making judgments about 
+                whether competency has been achieved, confirming an individual’s ability to 
+                perform to workplace standards.
+                ◦ Performance-Based Assessment: Measuring individual performance in the workplace.
+                ◦ Student Learning Evidence: Demonstrating the extent to which students have met stated 
+                goals or objectives.
+            ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to occupational competencies and embracing an inclusive approach.<br><br><br>
+        <span class="text-header">Vision</span><br><br>
+        To be a catalyst for economic growth by empowering individuals through skill development 
+        and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
+        all sectors.<br><br><br>
+        <span class="text-header">About ACI</span><br><br>
+        Established in 2009, ACI is a leading not-for-profit organization dedicated to 
+        entrepreneurship development and youth empowerment in India. ACI works closely 
+        with national and international bodies, including the Directorate General of 
+        Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
+        playing a key role in policy formulation for MSME growth.
+        Since 2015, ACI has served as a skill assessment body, evaluating the competencies 
+        of over 40,000 candidates with the expertise of more than 350 highly qualified 
+        assessors under the DGET-Modular Employable Skills (MES) Courses.</p>
+    </div>
+
     
 </body>
 </html>
+
+
+<!-- <span>Home</span> -->
+<!-- https://docs.fontawesome.com/web/add-icons/how-to -->
