--- a/ACI/About Us/index.html
+++ b/ACI/About Us/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>ACI</title>
+    <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="navbar">
@@ -13,9 +17,37 @@
         <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
         <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
         <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
-        <a id="about-us" class="navbar-item">About Us</a>
-        <a id="contact-us" class="navbar-item">Contact Us</a>
+        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
+        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
     </div>
+    <div id="text-container">
+        <p class="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
+        organization registered under the Society Registration Act XXI of 1860, 
+        bearing Registration No-66879, New Delhi. Founded on September 9, 2009, 
+        ACI operates as a not-for-profit entity with a mission to empower youth 
+        and stimulate entrepreneurship across India. By focusing on vocational 
+        training and skill development, ACI is instrumental in shaping the future of 
+        Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
+        equipped to thrive in a rapidly evolving economy.<br><br><br>
+        <span class="text-header">Vision</span><br><br>
+        To be a catalyst for economic growth by empowering individuals through skill development 
+        and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
+        all sectors.<br><br><br>
+        <span class="text-header">About ACI</span><br><br>
+        Established in 2009, ACI is a leading not-for-profit organization dedicated to 
+        entrepreneurship development and youth empowerment in India. ACI works closely 
+        with national and international bodies, including the Directorate General of 
+        Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
+        playing a key role in policy formulation for MSME growth.
+        Since 2015, ACI has served as a skill assessment body, evaluating the competencies 
+        of over 40,000 candidates with the expertise of more than 350 highly qualified 
+        assessors under the DGET-Modular Employable Skills (MES) Courses.</p>
+    </div>
+
     
 </body>
 </html>
+
+
+<!-- <span>Home</span> -->
+<!-- https://docs.fontawesome.com/web/add-icons/how-to -->
