Removed line-breaks as the headers will be separate elements and can be spaced with padding or margin.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -28,8 +28,8 @@
         and stimulate entrepreneurship across India. By focusing on vocational 
         training and skill development, ACI is instrumental in shaping the future of 
         Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
-        equipped to thrive in a rapidly evolving economy.<br><br><br>
-        <span class="text-header">Vision</span><br><br>
+        equipped to thrive in a rapidly evolving economy.</p>
+        <span class="text-header">Vision</span>
         To be a catalyst for economic growth by empowering individuals through skill development 
         and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
         all sectors.<br><br><br>
