Refactored layout by separating text and images into content-container and text-container divs. Added image elements for 'Introduction,' 'Vision,' and 'About ACI' sections to improve visual structure.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -20,28 +20,45 @@
         <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
         <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
     </div>
-    <div id="content-container">
-        <p class="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
-        organization registered under the Society Registration Act XXI of 1860, 
-        bearing Registration No-66879, New Delhi. Founded on September 9, 2009, 
-        ACI operates as a not-for-profit entity with a mission to empower youth 
-        and stimulate entrepreneurship across India. By focusing on vocational 
-        training and skill development, ACI is instrumental in shaping the future of 
-        Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
-        equipped to thrive in a rapidly evolving economy.</p>
-        <span class="text-header">Vision</span>
-        To be a catalyst for economic growth by empowering individuals through skill development 
-        and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
-        all sectors.<br><br><br>
-        <span class="text-header">About ACI</span><br><br>
-        Established in 2009, ACI is a leading not-for-profit organization dedicated to 
-        entrepreneurship development and youth empowerment in India. ACI works closely 
-        with national and international bodies, including the Directorate General of 
-        Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
-        playing a key role in policy formulation for MSME growth.
-        Since 2015, ACI has served as a skill assessment body, evaluating the competencies 
-        of over 40,000 candidates with the expertise of more than 350 highly qualified 
-        assessors under the DGET-Modular Employable Skills (MES) Courses.</p>
+    <div class="content-container">
+        <div class="text-container">
+            <h2 class="text-header">Introduction</h2>
+            <p class="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
+            organization registered under the Society Registration Act XXI of 1860, 
+            bearing Registration No-66879, New Delhi. Founded on September 9, 2009, 
+            ACI operates as a not-for-profit entity with a mission to empower youth 
+            and stimulate entrepreneurship across India. By focusing on vocational 
+            training and skill development, ACI is instrumental in shaping the future of 
+            Micro, Small & Medium Enterprises (MSMEs) and ensuring that the Indian workforce is 
+            equipped to thrive in a rapidly evolving economy.</p>
+        </div>
+        <div class="image-container">
+            <!-- <img src="pexels-padrinan-2882558-001.jpg" width="400px" alt="Introduction"> -->
+            <img src="pexels-padrinan-2882558-001.jpg" alt="Introduction">
+        </div>
+    </div>
+    <div class="content-container">
+        <img src="pexels-padrinan-2882558-001.jpg" alt="Introduction">
+        <div class="text-container">
+            <h2 class="text-header">Vision</h2>
+            <p class="text-body">To be a catalyst for economic growth by empowering individuals through skill development 
+            and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
+            all sectors.</p>
+        </div>
+    </div>
+    <div class="content-container">
+        <div class="text-container">
+            <h2 class="text-header">About ACI</h2>
+            <p class="text-body">Established in 2009, ACI is a leading not-for-profit organization dedicated to 
+            entrepreneurship development and youth empowerment in India. ACI works closely 
+            with national and international bodies, including the Directorate General of 
+            Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
+            playing a key role in policy formulation for MSME growth.
+            Since 2015, ACI has served as a skill assessment body, evaluating the competencies 
+            of over 40,000 candidates with the expertise of more than 350 highly qualified 
+            assessors under the DGET-Modular Employable Skills (MES) Courses.</p>
+        </div>
+        <img src="pexels-padrinan-2882558-001.jpg" alt="Introduction">
     </div>
 
     
