Added a footer container where the website creator details will be displayed.

--- a/ACI/index.html
+++ b/ACI/index.html
@@ -60,6 +60,9 @@
         </div>
         <img src="pexels-padrinan-2882558-001.jpg" alt="Introduction">
     </div>
+    <div id="footer-container">
+        
+    </div>
 
     
 </body>
