--- a/ACI/Assessment Methodology/index.html
+++ b/ACI/Assessment Methodology/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <div id="navbar">
-        <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
-        <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
-        <a id="services" class="navbar-item" href="Services/index.html">Services</a>
-        <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
-        <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
-        <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
-        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
-        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
+        <a id="logo" class="navbar-item" href="/index.html">Logo Placeholder</a>
+        <a class="navbar-item" href="/index.html"><i class="fa fa-home"></i></a>
+        <a id="services" class="navbar-item" href="/Services/index.html">Services</a>
+        <a id="data-management-systems" class="navbar-item" href="/Data Management Systems/index.html">Data Management Systems</a>
+        <a id="assessment-methodology" class="navbar-item" href="/Assessment Methodology/index.html">Assessment Methodology </a>
+        <a id="delivery-plan" class="navbar-item" href="/Delivery Plan/index.html">Delivery Plan</a>
+        <a id="about-us" class="navbar-item" href="/About Us/index.html">About Us</a>
+        <a id="contact-us" class="navbar-item" href="/Contact Us/index.html">CONTACT</a>
     </div>
     <div id="text-container">
         <p class="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
