--- a/ACI/Delivery Plan/index.html
+++ b/ACI/Delivery Plan/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ACI</title>
+    <title>Delivery Plan</title>
     <script src="https://kit.fontawesome.com/d3aee35f08.js" crossorigin="anonymous"></script>
     <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -11,14 +11,14 @@
 </head>
 <body>
     <div id="navbar">
-        <a id="logo" class="navbar-item" href="#">Logo Placeholder</a>
-        <a class="navbar-item" href="#"><i class="fa fa-home"></i></a>
+        <a id="logo" class="navbar-item" href="/index.html">Logo Placeholder</a>
+        <a class="navbar-item" href="/index.html"><i class="fa fa-home"></i></a>
         <a id="services" class="navbar-item" href="Services/index.html">Services</a>
         <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
         <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
         <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
-        <a id="about-us" class="navbar-item" href="About Us/index.html">About Us</a>
-        <a id="contact-us" class="navbar-item" href="Contact Us/index.html">CONTACT</a>
+        <a id="about-us" class="navbar-item" href="/About Us/index.html">About Us</a>
+        <a id="contact-us" class="navbar-item" href="/Contact Us/index.html">CONTACT</a>
     </div>
     <div id="text-container">
         <p class="text-body">The Association of Computer Institutes (ACI) is a prominent national-level
