--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -13,10 +13,10 @@
     <div id="navbar">
         <a id="logo" class="navbar-item" href="/index.html">Logo Placeholder</a>
         <a class="navbar-item" href="/index.html"><i class="fa fa-home"></i></a>
-        <a id="services" class="navbar-item" href="Services/index.html">Services</a>
-        <a id="data-management-systems" class="navbar-item">Data Management Systems</a>
-        <a id="assessment-methodology" class="navbar-item">Assessment Methodology </a>
-        <a id="delivery-plan" class="navbar-item">Delivery Plan</a>
+        <a id="services" class="navbar-item" href="#">Services</a>
+        <a id="data-management-systems" class="navbar-item" href="/Data Management Systems/index.html">Data Management Systems</a>
+        <a id="assessment-methodology" class="navbar-item" href="/Assessment Methodology/index.html">Assessment Methodology </a>
+        <a id="delivery-plan" class="navbar-item" href="/Delivery Plan/index.html">Delivery Plan</a>
         <a id="about-us" class="navbar-item" href="/About Us/index.html">About Us</a>
         <a id="contact-us" class="navbar-item" href="/Contact Us/index.html">Grievance</a>
     </div>
