Removed line breaks.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -21,7 +21,6 @@
         <a id="contact-us" class="navbar-item" href="/Contact Us/index.html">Grievance</a>
     </div>
     <div id="text-container">
-        
         <p class="text-body">
             <span class="text-header">Business Counselling & Entrepreneurship Development</span><br><br>
             ACI provides sector-specific counselling to young entrepreneurs and MSMEs, 
@@ -48,8 +47,8 @@
             Accreditation Board of Education & Training, New Delhi, ensuring adherence to the 
             highest levels of performance, integrity, and quality. With offices across most states 
             in India, ACI maintains approximately 15-20 accredited examiners per state, operating 
-            within a well-defined framework to meet local and regional requirements.<br><br><br>
-            <span class="text-header">National Skill Qualification Framework (NSQF)</span><br><br>
+            within a well-defined framework to meet local and regional requirements.
+            <span class="text-header">National Skill Qualification Framework (NSQF)</span>
             The National Skill Qualification Framework (NSQF) is a quality assurance framework that 
             organizes qualifications according to levels of knowledge, skills, and aptitude. 
             Comprising ten levels, each represents a different level of complexity and expertise.
@@ -64,11 +63,11 @@
                 ◦ Student Learning Evidence: Demonstrating the extent to which students have met stated 
                 goals or objectives.
             ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to occupational competencies and embracing an inclusive approach.<br><br><br>
-        <span class="text-header">Vision</span><br><br>
+        <span class="text-header">Vision</span>
         To be a catalyst for economic growth by empowering individuals through skill development 
         and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
-        all sectors.<br><br><br>
-        <span class="text-header">About ACI</span><br><br>
+        all sectors.
+        <span class="text-header">About ACI</span>
         Established in 2009, ACI is a leading not-for-profit organization dedicated to 
         entrepreneurship development and youth empowerment in India. ACI works closely 
         with national and international bodies, including the Directorate General of 
