Removed line-breaks from the text content, on my birthday :) :D

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -22,22 +22,22 @@
     </div>
     <div id="text-container">
         <p class="text-body">
-            <span class="text-header">Business Counselling & Entrepreneurship Development</span><br><br>
+            <span class="text-header">Business Counselling & Entrepreneurship Development</span>
             ACI provides sector-specific counselling to young entrepreneurs and MSMEs, 
             offering guidance on various business opportunities. One-on-one business counselling 
             is provided voluntarily by experienced member entrepreneurs trained in professional 
             counselling. Additionally, ACI offers access to business ideas, government schemes, 
-            incentives, and incubation centers across India.<br><br><br>
-            <span class="text-header">Skill Assessment</span><br><br>
+            incentives, and incubation centers across India.
+            <span class="text-header">Skill Assessment</span>
             As an independent assessing body, ACI evaluates the competencies of individuals trained 
             under the Modular Employable Skills (MES) Courses and those who have acquired skills 
             informally. ACI is also in the final stages of developing online skill assessments, 
-            further enhancing accessibility and efficiency in evaluation.<br><br><br>
-            <span class="text-header">Content Development & Certification</span><br><br>
+            further enhancing accessibility and efficiency in evaluation.
+            <span class="text-header">Content Development & Certification</span>
             ACI conducts sector-specific studies to develop question banks under the Sector Skill 
             Councils (SSC) and Skill Development Initiatives (SDI) schemes, ensuring rigorous 
-            assessment standards.<br><br><br>
-            <span class="text-header">Skill Assessment and Certifications</span><br><br>
+            assessment standards.
+            <span class="text-header">Skill Assessment and Certifications</span>
             ACI operates as an impartial, third-party organization with no involvement in training 
             programs, which guarantees the quality and credibility of its assessments. Since 2015, 
             ACI has assessed more than 40,000 candidates through a network of over 350 highly 
@@ -62,7 +62,7 @@
                 ◦ Performance-Based Assessment: Measuring individual performance in the workplace.
                 ◦ Student Learning Evidence: Demonstrating the extent to which students have met stated 
                 goals or objectives.
-            ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to occupational competencies and embracing an inclusive approach.<br><br><br>
+            ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to occupational competencies and embracing an inclusive approach.
         <span class="text-header">Vision</span>
         To be a catalyst for economic growth by empowering individuals through skill development 
         and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
