Removed Introduction text content that was being used as placeholder earlier.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -62,20 +62,9 @@
                 ◦ Performance-Based Assessment: Measuring individual performance in the workplace.
                 ◦ Student Learning Evidence: Demonstrating the extent to which students have met stated 
                 goals or objectives.
-            ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to occupational competencies and embracing an inclusive approach.
-        <span class="text-header">Vision</span>
-        To be a catalyst for economic growth by empowering individuals through skill development 
-        and entrepreneurship, ensuring sustainable livelihoods, and fostering innovation across 
-        all sectors.
-        <span class="text-header">About ACI</span>
-        Established in 2009, ACI is a leading not-for-profit organization dedicated to 
-        entrepreneurship development and youth empowerment in India. ACI works closely 
-        with national and international bodies, including the Directorate General of 
-        Employment & Training (DGET) and the Ministry of Skill Development & Entrepreneurship, 
-        playing a key role in policy formulation for MSME growth.
-        Since 2015, ACI has served as a skill assessment body, evaluating the competencies 
-        of over 40,000 candidates with the expertise of more than 350 highly qualified 
-        assessors under the DGET-Modular Employable Skills (MES) Courses.</p>
+            ACI's assessment approach emphasizes transparency, accountability, authenticity, validity, 
+            reliability, flexibility, and fairness, utilizing a range of tools and tasks tailored to 
+            occupational competencies and embracing an inclusive approach.
     </div>
 
     
