Changed content element's type from paragraph to div.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -21,7 +21,7 @@
         <a id="contact-us" class="navbar-item" href="/Contact Us/index.html">Grievance</a>
     </div>
     <div id="content-container">
-        <p class="text-body">
+        <div class="text-body">
             <span class="text-header">Business Counselling & Entrepreneurship Development</span>
             ACI provides sector-specific counselling to young entrepreneurs and MSMEs, 
             offering guidance on various business opportunities. One-on-one business counselling 
