Converted more paragraph elements to div.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -28,17 +28,17 @@
             is provided voluntarily by experienced member entrepreneurs trained in professional 
             counselling. Additionally, ACI offers access to business ideas, government schemes, 
             incentives, and incubation centers across India.</div>
-            <span class="text-header">Skill Assessment</span>
+            <div class="text-header">Skill Assessment</div>
             As an independent assessing body, ACI evaluates the competencies of individuals trained 
             under the Modular Employable Skills (MES) Courses and those who have acquired skills 
             informally. ACI is also in the final stages of developing online skill assessments, 
             further enhancing accessibility and efficiency in evaluation.
-            <span class="text-header">Content Development & Certification</span>
+            <div class="text-header">Content Development & Certification</div>
             ACI conducts sector-specific studies to develop question banks under the Sector Skill 
             Councils (SSC) and Skill Development Initiatives (SDI) schemes, ensuring rigorous 
             assessment standards.
-            <span class="text-header">Skill Assessment and Certifications</span>
-            ACI operates as an impartial, third-party organization with no involvement in training 
+            <div class="text-header">Skill Assessment and Certifications</div>
+            <div>ACI operates as an impartial, third-party organization with no involvement in training 
             programs, which guarantees the quality and credibility of its assessments. Since 2015, 
             ACI has assessed more than 40,000 candidates through a network of over 350 highly 
             qualified assessors under the DGET-Modular Employable Skills (MES) Courses, including 
@@ -47,11 +47,11 @@
             Accreditation Board of Education & Training, New Delhi, ensuring adherence to the 
             highest levels of performance, integrity, and quality. With offices across most states 
             in India, ACI maintains approximately 15-20 accredited examiners per state, operating 
-            within a well-defined framework to meet local and regional requirements.
-            <span class="text-header">National Skill Qualification Framework (NSQF)</span>
-            The National Skill Qualification Framework (NSQF) is a quality assurance framework that 
+            within a well-defined framework to meet local and regional requirements.</div>
+            <div class="text-header">National Skill Qualification Framework (NSQF)</div>
+            <div>The National Skill Qualification Framework (NSQF) is a quality assurance framework that 
             organizes qualifications according to levels of knowledge, skills, and aptitude. 
-            Comprising ten levels, each represents a different level of complexity and expertise.
+            Comprising ten levels, each represents a different level of complexity and expertise.</div>
                 <span class="list-point-parent">National Occupation Standards (NOS):</span>
                 These standards define the measurable performance outcomes expected from individuals 
                 in specific tasks, serving as benchmarks for various education and training programs.
