Converted 2 paragraph elements to div.

--- a/ACI/Services/index.html
+++ b/ACI/Services/index.html
@@ -52,9 +52,9 @@
             <div>The National Skill Qualification Framework (NSQF) is a quality assurance framework that 
             organizes qualifications according to levels of knowledge, skills, and aptitude. 
             Comprising ten levels, each represents a different level of complexity and expertise.</div>
-                <span class="list-point-parent">National Occupation Standards (NOS):</span>
-                These standards define the measurable performance outcomes expected from individuals 
-                in specific tasks, serving as benchmarks for various education and training programs.
+                <div class="list-point-parent">National Occupation Standards (NOS):</div>
+                <div>These standards define the measurable performance outcomes expected from individuals 
+                in specific tasks, serving as benchmarks for various education and training programs.</div>
                 <span class="list-point-parent">Assessments: ACI’s assessments focus on:</span>
                 ◦ Competency-Based Assessment: Collecting evidence and making judgments about 
                 whether competency has been achieved, confirming an individual’s ability to 
